Status now a tooltip

--- a/P1/src/pet_detail.html
+++ b/P1/src/pet_detail.html
@@ -60,9 +60,20 @@
             <div class="bg-white flex-col flex-start p-6 w-full">
                 <div
                     class="flex mb-2 text-2xl items-center font-medium leading-tight text-neutral-800 dark:text-neutral-50">
-                    <h5 class="w-1/2">
-                        DunDun
-                    </h5>
+                    <div class="flex w-1/2">
+                        <h5>
+                            DunDun
+                        </h5>
+
+                        <a href="#"
+                            class="transititext-primary text-primary transition duration-150 ease-in-out hover:text-primary-600 focus:text-primary-600 active:text-primary-700 dark:text-primary-400 dark:hover:text-primary-500 dark:focus:text-primary-500 dark:active:text-primary-600"
+                            data-te-toggle="tooltip" title="DunDun is waiting to be adopted!">
+                            <div class="ml-3 bg-green-600 h-6 w-6 rounded-full text-right">
+
+                            </div>
+                        </a>
+                    </div>
+
                     <h5 class="w-1/2 text-right">
                         October 10th, 2023
                     </h5>
@@ -351,19 +362,6 @@
                     </ul>
 
                 </div>
-
-                <div
-                    class="flex justify-between  text-2xl mt-6 mb-1 items-center font-medium leading-tight text-neutral-800 dark:text-neutral-50">
-                    <h5>
-                        Pet Status
-                    </h5>
-                    <div class="bg-green-600 h-6 w-6 rounded-full text-right">
-
-                    </div>
-                </div>
-                <hr class="my-2">
-
-                <p>DunDun is waiting to be adopted!</p>
             </div>
         </div>
     </section>
