--- a/P1/src/pet_detail.html
+++ b/P1/src/pet_detail.html
@@ -80,7 +80,7 @@
 
                         <a href="#"
                             class="transititext-primary text-primary transition duration-150 ease-in-out hover:text-primary-600 focus:text-primary-600 active:text-primary-700 dark:text-primary-400 dark:hover:text-primary-500 dark:focus:text-primary-500 dark:active:text-primary-600"
-                            data-te-toggle="tooltip" title="DunDun is waiting to be adopted!">
+                            data-te-toggle="tooltip" title="DunDun is available!">
                             <div class="md:ml-3 bg-green-600 h-6 w-6 rounded-full text-right">
 
                             </div>
