shelter_application, user_application update

--- a/P1/src/shelter_application.html
+++ b/P1/src/shelter_application.html
@@ -198,18 +198,20 @@
                                 <label for="pet_ownership" class="mt-1 p-2 block font-bold text-gray-700">Do you own any
                                     pets?<span class="text-red-500">*</span></label>
                                 <div class="mb-4">
-                                    <div class="text-center mb-4">
-                                        <label class="block mb-2">
-                                            <input type="radio" class="form-radio text-blue-600" name="choice"
-                                                value="yes" disabled>
-                                            <span class="ml-2">Yes</span>
-                                        </label>
+                                    <div class="justify-center mb-4">
+                                        <div>
+                                            <label class="block mb-2">
+                                                <input type="radio" class="form-radio text-blue-600" name="yes"
+                                                    value="Yes" checked disabled>
+                                                <span class="ml-2">Yes</span>
+                                            </label>
 
-                                        <label class="block">
-                                            <input type="radio" class="form-radio text-red-600" name="choice" value="no"
-                                                disabled checked disabled>
-                                            <span class="ml-2">No</span>
-                                        </label>
+                                            <label class="block">
+                                                <input type="radio" class="form-radio text-red-600" name="no" value="No"
+                                                    disabled>
+                                                <span class="ml-2">No</span>
+                                            </label>
+                                        </div>
                                     </div>
                                 </div>
 
@@ -241,18 +243,20 @@
                                     your
                                     home?<span class="text-red-500">*</span></label>
                                 <div class="mb-10">
-                                    <div class="text-center mb-4">
-                                        <label class="block mb-2">
-                                            <input type="radio" class="form-radio text-blue-600" name="choice"
-                                                value="own" checked disabled>
-                                            <span class="ml-2">Own</span>
-                                        </label>
+                                    <div class="justify-center mb-4">
+                                        <div>
+                                            <label class="block mb-2">
+                                                <input type="radio" class="form-radio text-blue-600" name="own"
+                                                    value="own" checked disabled>
+                                                <span class="ml-2">Own</span>
+                                            </label>
 
-                                        <label class="block">
-                                            <input type="radio" class="form-radio text-red-600" name="choice"
-                                                value="rent" disabled>
-                                            <span class="ml-2">Rent</span>
-                                        </label>
+                                            <label class="block">
+                                                <input type="radio" class="form-radio text-red-600" name="rent"
+                                                    value="rent" disabled>
+                                                <span class="ml-2">Rent</span>
+                                            </label>
+                                        </div>
                                     </div>
                                 </div>
 
