made forgot pw page and finished main page

--- a/P1/src/signup/sec_shelter_signup.html
+++ b/P1/src/signup/sec_shelter_signup.html
@@ -105,7 +105,7 @@
                         </div>
                         <div>
                             <p class="text-sm font-medium text-gray-500">
-                                Already have an account? <a href="./login.html" class="font-medium text-blue-600 hover:underline">Login</a>
+                                Already have an account? <a href="../login.html" class="font-medium text-blue-600 hover:underline">Login</a>
                             </p>
                         </div>
                     </form>
