--- a/P1/src/login.html
+++ b/P1/src/login.html
@@ -38,7 +38,7 @@
                         <div>
                             <div class="flex justify-between items-center">
                                 <label for="password" class="block mb-2 text-sm font-medium text-gray-900 ">Password</label>
-                                <a href="#" class="inline-block mb-2 text-sm font-light text-gray-500 hover:underline">Forgot Password?</a>
+                                <a href="./forgot_pw.html" class="inline-block mb-2 text-sm font-light text-gray-500 hover:underline">Forgot Password?</a>
                             </div>
                             
                             <input type="password" name="password" id="password" placeholder="••••••••" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 " required="">
