--- a/P1/src/user_application.html
+++ b/P1/src/user_application.html
@@ -16,7 +16,7 @@
     </style> -->
 </head>
 
-<body class="flex flex-col justify-center items-center">
+<body class="flex flex-col justify-center items-center bg-gray-100 m-3">
     <div class="flex justify-center items-center p-3">
         <div class="rounded-full w-[50px] h-[50px] mr-1 mb-1">
             <img src="resources/shelter/shelter_logo.png">
@@ -223,7 +223,7 @@
                                 <div class="mb-4">
                                     <textarea type="breed" id="breed" name="breed"
                                         class="mt-1 p-2 w-full border rounded-md align-top"
-                                        style="resize: none; height: 200px;" readonly>I have a 3 years old Golden Retriever.
+                                        style="resize: none; height: 200px;" readonly>I have a 3 year old Golden Retriever.
                             </textarea>
                                 </div>
 
