--- a/P1/src/main.html
+++ b/P1/src/main.html
@@ -17,7 +17,7 @@
     <!-- Navbar (You can customize it as needed) -->
     <nav class="border-gray-200">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-        <a href="#" class="flex items-center">
+        <a href="./main.html" class="flex items-center">
             <span class="self-center text-3xl font-bold whitespace-nowrap">Pet Pal</span>
         </a>
         <div class="flex md:order-2 items-center space-x-4">
@@ -390,7 +390,7 @@
             <hr class="my-6 border-gray-200 sm:mx-auto lg:my-6" />
             <div class="sm:flex sm:items-center sm:justify-between">
                 <span class="text-sm text-gray-500 sm:text-center">© 2023 <a href="https://flowbite.com/" class="hover:underline">
-                    Flowbite™</a>. All Rights Reserved.
+                    PetPal™</a>. All Rights Reserved.
                 </span>
                 <div class="flex mt-4 space-x-5 sm:justify-center sm:mt-0">
                     <a href="#" class="text-gray-500 hover:text-gray-900">
