--- a/P1/src/main_after_login.html
+++ b/P1/src/main_after_login.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- font awseome icon -->
     <script src="https://kit.fontawesome.com/199027eb42.js" crossorigin="anonymous"></script>
-    <title>Pet Pal - Home</title>
+    <title>Pet Pal - Home Seeker</title>
 </head>
 <body>
     <!-- Navbar (You can customize it as needed) -->
@@ -48,7 +48,7 @@
                         <a href="#" class="hidden md:flex md:px-4 md:py-3 md:hover:bg-gray-100">
 
                         <div class="w-full pl-3">
-                            <div class="text-gray-500 text-sm mb-1.5"><span class="font-semibold text-gray-900">Timmy</span> has been adopted</div>
+                            <div class="text-gray-500 text-sm mb-1.5"><span class="font-semibold text-gray-900">Timmy</span> has been adopted!</div>
                             <div class="text-xs text-blue-600">10 minutes ago</div>
                         </div>
                         </a>
@@ -56,25 +56,18 @@
                         <a href="#" class="hidden md:flex md:px-4 md:py-3 hover:bg-gray-100">
 
                         <div class="w-full pl-3">
-                            <div class="text-gray-500 text-sm mb-1.5 "><span class="font-semibold text-gray-900">Bonnie Green</span> and <span class="font-medium text-gray-900 ">141 others</span> love your story. See it and view more stories.</div>
+                            <div class="text-gray-500 text-sm mb-1.5 "><span class="font-semibold text-gray-900">Toronto Community Centre</span> has posted <span class="font-medium text-gray-900 ">2 new</span> pets!</div>
                             <div class="text-xs text-blue-600 ">44 minutes ago</div>
                         </div>
                         </a>
 
                         <a href="#" class="hidden md:flex md:px-4 md:py-3 hover:bg-gray-100">
                         <div class="w-full pl-3">
-                            <div class="text-gray-500 text-sm mb-1.5 "><span class="font-semibold text-gray-900 ">Leslie Livingston</span> mentioned you in a comment: <span class="font-medium text-blue-500" href="#">@bonnie.green</span> what do you say?</div>
+                            <div class="text-gray-500 text-sm mb-1.5 "><span class="font-semibold text-gray-900 ">Toronto Community Centre</span> has left a reply! <span class="font-medium text-blue-500" href="#">@bonnie.green</span> It costs ...</div>
                             <div class="text-xs text-blue-600 ">1 hour ago</div>
                         </div>
                         </a>
 
-                        <a href="#" class="hidden md:flex md:px-4 md:py-3 hover:bg-gray-100">
-
-                        <div class="w-full pl-3">
-                            <div class="text-gray-500 text-sm mb-1.5 "><span class="font-semibold text-gray-900 ">Robert Brown</span> posted a new video: Glassmorphism - learn how to implement the new design trend.</div>
-                            <div class="text-xs text-blue-600 ">3 hours ago</div>
-                        </div>
-                        </a>
                     </div>
                     <a href="#" class="hidden md:block md:py-2 md:text-sm md:font-medium md:text-center md:text-gray-900 md:rounded-b-lg md:bg-gray-50 md:hover:bg-gray-100">
                         <div class="inline-flex items-center ">
@@ -109,20 +102,20 @@
                 <div class="z-50 hidden my-4 text-base list-none bg-white divide-y divide-gray-100 rounded-lg shadow border" id="user-dropdown">
                     <div class="px-4 py-3 bg-gray-50">
                         <span class="block text-sm text-gray-900 font-medium">Bonnie Green</span>
-                        <span class="block text-sm  text-gray-500 truncate">name@flowbite.com</span>
+                        <span class="block text-sm  text-gray-500 truncate">bonnie@gmail.com</span>
                     </div>
                     <ul class="py-2" aria-labelledby="user-menu-button">
                         <li>
-                        <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Dashboard</a>
+                        <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Settings</a>
                         </li>
                         <li>
-                        <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Settings</a>
+                            <a href="list_seeker_applications.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">My Application</a>
                         </li>
                         <li>
                             <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Saved</a>
                         </li>
                         <li>
-                            <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Notifications</a>
+                            <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Notification</a>
                         </li>
                     </ul>
                     <div class="py-1">
@@ -495,16 +488,6 @@
                         </svg>
                         <span class="sr-only">Twitter page</span>
                     </a>
-                    <!-- <a href="#" class="text-gray-500 hover:text-gray-900">
-                        <i class="fa-brands fa-instagram fa-lg" aria-hidden="true"></i>
-                        <span class="sr-only">Instagram</span>
-                    </a>
-                    <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
-                        <svg class="w-4 h-4 md:w-5 md:h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
-                            <path fill-rule="evenodd" d="M10 0a10 10 0 1 0 10 10A10.009 10.009 0 0 0 10 0Zm6.613 4.614a8.523 8.523 0 0 1 1.93 5.32 20.094 20.094 0 0 0-5.949-.274c-.059-.149-.122-.292-.184-.441a23.879 23.879 0 0 0-.566-1.239 11.41 11.41 0 0 0 4.769-3.366ZM8 1.707a8.821 8.821 0 0 1 2-.238 8.5 8.5 0 0 1 5.664 2.152 9.608 9.608 0 0 1-4.476 3.087A45.758 45.758 0 0 0 8 1.707ZM1.642 8.262a8.57 8.57 0 0 1 4.73-5.981A53.998 53.998 0 0 1 9.54 7.222a32.078 32.078 0 0 1-7.9 1.04h.002Zm2.01 7.46a8.51 8.51 0 0 1-2.2-5.707v-.262a31.64 31.64 0 0 0 8.777-1.219c.243.477.477.964.692 1.449-.114.032-.227.067-.336.1a13.569 13.569 0 0 0-6.942 5.636l.009.003ZM10 18.556a8.508 8.508 0 0 1-5.243-1.8 11.717 11.717 0 0 1 6.7-5.332.509.509 0 0 1 .055-.02 35.65 35.65 0 0 1 1.819 6.476 8.476 8.476 0 0 1-3.331.676Zm4.772-1.462A37.232 37.232 0 0 0 13.113 11a12.513 12.513 0 0 1 5.321.364 8.56 8.56 0 0 1-3.66 5.73h-.002Z" clip-rule="evenodd"/>
-                        </svg>
-                        <span class="sr-only">Dribbble account</span>
-                    </a> -->
                 </div>
             </div>
         </div>
