--- a/P1/src/main_after_login_shelter.html
+++ b/P1/src/main_after_login_shelter.html
@@ -130,7 +130,7 @@
                 <a href="#" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:underline md:hover:bg-transparent md:p-0">About</a>
                 </li>
                 <li>
-                <a href="#" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:underline md:hover:bg-transparent md:p-0">Adopt</a>
+                <a href="#" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:underline md:hover:bg-transparent md:p-0">My Pets</a>
                 </li>
                 <li>
                 <a href="#" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:underline md:hover:bg-transparent md:p-0">Contact</a>
