--- a/P1/src/login.html
+++ b/P1/src/login.html
@@ -20,12 +20,12 @@
             </div>
         </nav>
     </header>
-    <section>
+    <section  class="bg-gray-50">
         <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
             <!-- <a href="#" class="flex items-center mb-6 text-2xl font-semibold text-gray-900">
                 Pet Pal    
             </a> -->
-            <div class="w-full bg-gray-50 rounded-lg shadow md:mt-0 sm:max-w-xl xl:p-0">
+            <div class="w-full rounded-lg bg-white shadow-md md:mt-0 sm:max-w-xl xl:p-0">
                 <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
                     <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl ">
                         Log In
