--- a/P1/src/signup/sec_shelter_signup.html
+++ b/P1/src/signup/sec_shelter_signup.html
@@ -20,9 +20,9 @@
             </div>
         </nav>
     </header>
-    <section>
+    <section class="bg-gray-50">
         <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
-            <div class="w-full bg-gray-50 rounded-lg shadow md:mt-0 sm:max-w-xl xl:p-0">
+            <div class="w-full bg-white rounded-lg shadow md:mt-0 sm:max-w-xl xl:p-0">
                 <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
                     <!-- <h1 class="text-xl mb-2 font-bold leading-tight tracking-tight text-gray-900 md:text-2xl ">
                         Shelter Sign Up
