--- a/P1/src/signup/first_shelter_signup.html
+++ b/P1/src/signup/first_shelter_signup.html
@@ -29,65 +29,64 @@
                         Shelter Sign Up
                     </h1>
                     <form>
+                        <!-- Organization Logo -->
+                        <div class="mb-4">
+                            <div class="flex items-center justify-center w-full mb-1">
+                                <label for="dropzone-file" class="flex flex-col items-center justify-center w-14 h-14 border-2 border-gray-300 border-dashed rounded-full cursor-pointer bg-gray-50 hover:bg-gray-100">
+                                    <div class="flex flex-col items-center">
+                                        <svg class="w-6 h-6 text-gray-500 object-center" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 16">
+                                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 13h3a3 3 0 0 0 0-6h-.025A5.56 5.56 0 0 0 16 6.5 5.5 5.5 0 0 0 5.207 5.021C5.137 5.017 5.071 5 5 5a4 4 0 0 0 0 8h2.167M10 15V6m0 0L8 8m2-2 2 2"/>
+                                        </svg>
+                                    </div>
+                                    <input id="dropzone-file" type="file" class="hidden" />
+                                </label>
+                            </div> 
+                            <p class="block text-sm font-normal text-gray-700 text-center">Upload Shelter Logo</p>
+                        </div>
+
                         <!-- Organization Name -->
-                        <div class="mb-5">
+                        <div class="mb-4">
                             <label for="org-name" class="block mb-2 text-sm font-medium text-gray-900">Organization Name</label>
                             <input type="text" id="org-name" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="Toronto Community Centre" required>
                         </div>
                         <!-- Phone Number -->
-                        <div class="mb-5"> 
+                        <div class="mb-4"> 
                             <label for="phone" class="block mb-2 text-sm font-medium text-gray-900">Phone number</label>
                             <input type="tel" id="phone" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required>
                         </div>
-
-                        <!-- Shelter Logo -->
-                        <div class="mb-6">
-                            <p class="block mb-2 text-sm font-medium text-gray-900">Upload Shelter Logo</p>
-                            <div class="grid gap-3 mb-6 md:grid-cols-5">
-                                <!-- shelter logo image -->
-                                <div class="md:col-span-1 relative w-10 h-10 sm:w-14 sm:h-14 overflow-hidden bg-gray-100 rounded-full dark:bg-gray-600">
-                                    <!-- <svg class="absolute w-12 h-12 text-gray-400 -left-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd"></path></svg> -->
-                                </div>
-                                <div class="md:col-span-4">
-                                    <label for="file_input"></label>
-                                    <input class="block w-full text-sm text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 focus:outline-none" aria-describedby="file_input_help" id="file_input" type="file">
-                                    <p class="mt-1 text-sm text-gray-500" id="file_input_help">SVG, PNG, JPG or GIF (MAX. 800x400px).</p>
-                                </div>
-                            </div>
-                        </div>
                         
                         <!-- Shelter gallery -->
-                        <div class="mb-5">
+                        <div class="mb-4">
+                            <p class="block mb-2 text-sm font-medium text-gray-900">Upload Shelter Pictures</p>
                             <div class="flex justify-center mb-2">
                                 <div class="mr-4">
                                     <div id="tooltip-jese" role="tooltip" class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
-                                        Jese Leos
                                         <div class="tooltip-arrow" data-popper-arrow></div>
                                     </div>
-                                    <img data-tooltip-target="tooltip-jese" class="w-10 h-10 sm:w-14 sm:h-14 rounded" src="../resources/shelter/shelter_1.png" alt="Medium avatar">
+                                    <img data-tooltip-target="tooltip-jese" class="w-14 h-14 sm:w-16 sm:h-16 rounded" src="../resources/shelter/shelter_1.png" alt="Medium avatar">
                                 </div>
                                 <div class="mr-4">
-                                    <div id="tooltip-roberta" role="tooltip" class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
-                                        Roberta Casas
-                                        <div class="tooltip-arrow" data-popper-arrow></div>
-                                    </div>
-                                    <img data-tooltip-target="tooltip-roberta" class="w-10 h-10 sm:w-14 sm:h-14 rounded" src="../resources/shelter/shelter_2.png" alt="Medium avatar">
+                                    <img data-tooltip-target="tooltip-roberta" class="w-14 h-14 sm:w-16 sm:h-16 rounded" src="../resources/shelter/shelter_2.png" alt="Medium avatar">
+                                </div>
+                                <div class="mr-4">
+                                    <img data-tooltip-target="tooltip-bonnie" class="w-14 h-14 sm:w-16 sm:h-16 rounded" src="../resources/shelter/shelter_3.jpg" alt="Medium avatar">
                                 </div>
                                 <div>
-                                    <div id="tooltip-bonnie" role="tooltip" class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
-                                        Bonnie Green
-                                        <div class="tooltip-arrow" data-popper-arrow></div>
-                                    </div>
-                                    <img data-tooltip-target="tooltip-bonnie" class="w-10 h-10 sm:w-14 sm:h-14 rounded" src="../resources/shelter/shelter_3.jpg" alt="Medium avatar">
+                                    <label for="dropzone-file" class="flex flex-col items-center justify-center w-14 h-14 sm:w-16 sm:h-16 border-2 border-gray-300 border-dashed rounded-lg cursor-pointer bg-gray-50 hover:bg-gray-100">
+                                        <div class="flex flex-col items-center">
+                                            <svg class="w-6 h-6 text-gray-500 object-center" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 16">
+                                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 13h3a3 3 0 0 0 0-6h-.025A5.56 5.56 0 0 0 16 6.5 5.5 5.5 0 0 0 5.207 5.021C5.137 5.017 5.071 5 5 5a4 4 0 0 0 0 8h2.167M10 15V6m0 0L8 8m2-2 2 2"/>
+                                            </svg>
+                                        </div>
+                                        <input id="dropzone-file" type="file" class="hidden" />
+                                    </label>
                                 </div>
-                            </div>
 
-                            <p class="block mb-2 text-sm font-medium text-gray-900">Upload Shelter Pictures</p>
-                            <div class="md:col-span-4">
+                            </div>
+                            <!-- <div class="md:col-span-4">
                                 <label for="file_input"></label>
                                 <input class="block w-full text-sm text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 focus:outline-none" aria-describedby="file_input_help" id="file_input" type="file">
-                                <!-- <p class="mt-1 text-sm text-gray-500 dark:text-gray-400" id="file_input_help">SVG, PNG, JPG or GIF (MAX. 800x400px).</p> -->
-                            </div>
+                            </div> -->
                         </div>
 
                         <!-- Mission Statement -->
