--- a/P1/src/thank_you_application.html
+++ b/P1/src/thank_you_application.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shelter Application View</title>
+    <title>Thank You</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/tw-elements.min.css" />
+    <link rel="stylesheet" href="style.css">
 
     <!-- <style>.sepcial {
     content: "";
@@ -36,7 +37,8 @@
         </a>
     </div>
 
-    <nav class="flex px-5 py-3 text-gray-700 border border-gray-200 rounded-lg bg-gray-50 dark:bg-gray-800 dark:border-gray-700"
+
+    <nav class="flex px-5 py-3 text-gray-700 border border-gray-200 rounded-lg bg-gray-50 dark:bg-gray-800 dark:border-gray-700 m-5"
         aria-label="Breadcrumb">
         <ol class="inline-flex items-center space-x-1 md:space-x-3">
             <li class="inline-flex items-center">
@@ -57,7 +59,7 @@
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="m1 9 4-4-4-4" />
                     </svg>
-                    <a href="list_shelter_applications.html"
+                    <a href="list_seeker_applications.html"
                         class="ml-1 text-sm font-medium text-gray-700 hover:text-blue-600 md:ml-2 dark:text-gray-400 dark:hover:text-white">List
                         of Applications</a>
                 </div>
@@ -65,7 +67,43 @@
         </ol>
     </nav>
 
-    <div class="m-4">
+    <div class="flex items-center justify-center">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+            class="w-20 h-20" style="color: green;">
+            <path stroke-linecap="round" stroke-linejoin="round"
+                d="M9 12.75L11.25 15 15 9.75M21 12c0 1.268-.63 2.39-1.593 3.068a3.745 3.745 0 01-1.043 3.296 3.745 3.745 0 01-3.296 1.043A3.745 3.745 0 0112 21c-1.268 0-2.39-.63-3.068-1.593a3.746 3.746 0 01-3.296-1.043 3.745 3.745 0 01-1.043-3.296A3.745 3.745 0 013 12c0-1.268.63-2.39 1.593-3.068a3.745 3.745 0 011.043-3.296 3.746 3.746 0 013.296-1.043A3.746 3.746 0 0112 3c1.268 0 2.39.63 3.068 1.593a3.746 3.746 0 013.296 1.043 3.746 3.746 0 011.043 3.296A3.745 3.745 0 0121 12z" />
+        </svg>
+    </div>
+
+
+    <div class="flex text-5xl justify-center p-3" style="color: green;">
+        Thank you!
+    </div>
+
+    <div class="flex text-2xl justify-center font-bold p-3">
+        You can see your completed application below.
+    </div>
+    <div class="flex text-1xl justify-center font-bold p-3">
+        <div class="flex justify-start p-2 mb-20">
+            <ul class="list-disc">
+                <h1 class="font-bold text-1xl mb-4">Next Steps:</h1>
+                <li class="font-bold mb-4 ml-8">
+                    Wait 5-7 business days for us to review your application.
+                </li>
+                <li class="font-bold mb-4 ml-8">
+                    If needed, withdraw your application within 3 days of submitting.
+                </li>
+                <li class="font-bold mb-4 ml-8">
+                    Be prepared to pay the fees within 10 days of acceptance.
+                </li>
+                <li class="font-bold ml-8">
+                    If you have any questions, contact us through the chat below.
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="ml-4 mr-4 mb-4">
         <div class="grid-cols-1 sm:grid md:grid-cols-1 p-4">
             <button type="button"
                 class="inline-block rounded border-2 border-primary px-6 pb-[6px] pt-2 mb-2 text-xs font-large uppercase leading-normal text-primary transition duration-150 ease-in-out hover:border-primary-600 hover:bg-neutral-500 hover:bg-opacity-10 hover:text-primary-600 focus:border-primary-600 focus:text-primary-600 focus:outline-none focus:ring-0 active:border-primary-700 active:text-primary-700 dark:hover:bg-neutral-100 dark:hover:bg-opacity-10"
@@ -77,11 +115,12 @@
                     <div class="bg-gray-200 rounded-lg">
                         <div class="bg-blue-500 text-white p-4 flex justify-center mb-4 items-center"
                             style="border-top-left-radius: 10px; border-top-right-radius: 10px;">
-                            <img src="resources/users/user_1.png"
-                                class="object-cover rounded-full w-[50px] h-[50px] mr-1 mb-1">
+                            <div class="rounded-full w-[50px] h-[50px] mr-1 mb-1">
+                                <img src="resources/shelter/shelter_logo.png">
+                            </div>
                             <div class="inline-block rounded px-6 pb-[6px] pt-2 font-bold" style="height: fit-content;"
                                 data-te-ripple-init id="liveChatButton">
-                                Applicant - Sean Song</div>
+                                Toronto Adoption Shelter</div>
                         </div>
                         <div class="grid-cols-1 sm:grid md:grid-cols-1 p-4">
 
@@ -163,10 +202,10 @@
                 });
             });
         </script>
-
         </section>
-        <div>
 
+
+        <div>
             <section id="application">
                 <form action="https://postman-echo.com/post" class="form">
                     <div class="bg-white border border-gray-200 p-1 rounded-lg m-4">
@@ -257,7 +296,7 @@
                             <div class="mb-4">
                                 <textarea type="breed" id="breed" name="breed"
                                     class="mt-1 p-2 w-full border rounded-md align-top"
-                                    style="resize: none; height: 200px;" readonly>I have a 3 years old Golden Retriever.
+                                    style="resize: none; height: 200px;" readonly>I have a 3 year old Golden Retriever.
                             </textarea>
                             </div>
 
@@ -303,21 +342,12 @@
                             </p>
                         </div>
 
-                        <div class="flex justify-start p-2 mb-20">
-                            <ul class="list-disc ml-4">
-                                <li class="font-bold mb-4">
-                                    I agree to adopt the pet if the application is accepted, and will pay the
-                                    adoption fee as
-                                    necessary.
-                                </li>
-                                <li class="font-bold mb-4">
-                                    I understand that there can be additional documents to complete after the
-                                    application is
-                                    submitted.
-                                </li>
+                        <div class="flex justify-start mb-20">
+                            <ul>
                                 <li class="font-bold">
                                     By clicking the submit button, I verify all of the above information is true and
                                     accurate.
+                                </li>
                             </ul>
                         </div>
 
@@ -328,22 +358,18 @@
                                 class="block mt-1 p-2 w-full border rounded-md" style="width: 250px;" value="Sean Song"
                                 readonly>
                         </div>
+
+
                     </div>
                 </form>
+
             </section>
-
-
-            <div class="grid-cols-2 sm:grid md:grid-cols-1 gap-4 ml-40 mr-40 mb-10">
-                <button type="button"
-                    class="inline-block rounded bg-success px-6 pb-2 pt-2.5 text-xs font-medium uppercase leading-normal text-white shadow-[0_4px_9px_-4px_#14a44d] transition duration-150 ease-in-out hover:bg-success-600 hover:shadow-[0_8px_9px_-4px_rgba(20,164,77,0.3),0_4px_18px_0_rgba(20,164,77,0.2)] focus:bg-success-600 focus:shadow-[0_8px_9px_-4px_rgba(20,164,77,0.3),0_4px_18px_0_rgba(20,164,77,0.2)] focus:outline-none focus:ring-0 active:bg-success-700 active:shadow-[0_8px_9px_-4px_rgba(20,164,77,0.3),0_4px_18px_0_rgba(20,164,77,0.2)] dark:shadow-[0_4px_9px_-4px_rgba(20,164,77,0.5)] dark:hover:shadow-[0_8px_9px_-4px_rgba(20,164,77,0.2),0_4px_18px_0_rgba(20,164,77,0.1)] dark:focus:shadow-[0_8px_9px_-4px_rgba(20,164,77,0.2),0_4px_18px_0_rgba(20,164,77,0.1)] dark:active:shadow-[0_8px_9px_-4px_rgba(20,164,77,0.2),0_4px_18px_0_rgba(20,164,77,0.1)]">
-                    Accept Application
-                </button>
+            <div class="grid-cols-1 sm:grid md:grid-cols-1 gap-4 ml-80 mr-80 mb-10">
                 <button type="button"
                     class="inline-block rounded bg-danger px-6 pb-2 pt-2.5 text-xs font-medium uppercase leading-normal text-white shadow-[0_4px_9px_-4px_#dc4c64] transition duration-150 ease-in-out hover:bg-danger-600 hover:shadow-[0_8px_9px_-4px_rgba(220,76,100,0.3),0_4px_18px_0_rgba(220,76,100,0.2)] focus:bg-danger-600 focus:shadow-[0_8px_9px_-4px_rgba(220,76,100,0.3),0_4px_18px_0_rgba(220,76,100,0.2)] focus:outline-none focus:ring-0 active:bg-danger-700 active:shadow-[0_8px_9px_-4px_rgba(220,76,100,0.3),0_4px_18px_0_rgba(220,76,100,0.2)] dark:shadow-[0_4px_9px_-4px_rgba(220,76,100,0.5)] dark:hover:shadow-[0_8px_9px_-4px_rgba(220,76,100,0.2),0_4px_18px_0_rgba(220,76,100,0.1)] dark:focus:shadow-[0_8px_9px_-4px_rgba(220,76,100,0.2),0_4px_18px_0_rgba(220,76,100,0.1)] dark:active:shadow-[0_8px_9px_-4px_rgba(220,76,100,0.2),0_4px_18px_0_rgba(220,76,100,0.1)]">
-                    Reject Application
+                    Withdraw Application
                 </button>
             </div>
-
         </div>
     </div>
 
