--- a/P1/src/pet_detail_error.html
+++ b/P1/src/pet_detail_error.html
@@ -436,9 +436,9 @@
         </div>
         <div class="flex justify-center">
             <a href="#"
-                class="transititext-primary text-primary transition duration-150 ease-in-out hover:text-primary-600 focus:text-primary-600 active:text-primary-700 dark:text-primary-400 dark:hover:text-primary-500 dark:focus:text-primary-500 dark:active:text-primary-600"
+                class="cursor-default transititext-primary text-primary transition duration-150 ease-in-out hover:text-primary-600 focus:text-primary-600 active:text-primary-700 dark:text-primary-400 dark:hover:text-primary-500 dark:focus:text-primary-500 dark:active:text-primary-600"
                 data-te-toggle="tooltip" title="You've already submitted an application for DunDun">
-                <button type="button"
+                <button type="button" disabled
                     class="m-3 text-white bg-gray-400 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2">
                     Adopt</button>
             </a>
